--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@angular/platform-browser-dynamic": "7.1.2",
     "@angular/router": "7.1.2",
     "angular-in-memory-web-api": "0.7.0",
-    "bootstrap": "4.1.3",
+    "bootstrap": "^4.1.3",
     "core-js": "2.5.4",
-    "jquery": "3.3.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1",
     "rxjs": "6.3.3",
     "toastr": "2.1.4",
     "zone.js": "0.8.26"
